--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vueuse/core": "^10.7.0",
     "@vueuse/nuxt": "^10.7.0",
     "nuxt": "^3.8.2",
+    "shadcn-nuxt": "^0.1.0",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
   }
